tests/paczka1/fuzzy1/15564163.err
Error in line 3: doQlkOD58 A744 65,1
Error in line 2: S675 A744 91,1
Error in line 32: F7a S675 42,1
Error in line 35: j2rUp2 A744 97,6
